feat: explored  Lesson 05

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 04-transform-objects/node_modules
 03-first-threejs-project/node_modules
 threejs_journey/excersie/node_modules
-
+05-animations/node_modules
 
