--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 threejs_journey/excersie/node_modules
 05-animations/node_modules
 06-cameras/node_modules
+07-fullscreen-and-resizing/node_modules
+08-geometries/node_modules
