feat: lesson 9 to 11

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ threejs_journey/excersie/node_modules
 06-cameras/node_modules
 07-fullscreen-and-resizing/node_modules
 08-geometries/node_modules
+09-debug-ui/node_modules
+10-textures/node_modules
+11-materials/node_modules
