--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,1 @@
-04-transform-objects/node_modules
-03-first-threejs-project/node_modules
-threejs_journey/excersie/node_modules
-05-animations/node_modules
-06-cameras/node_modules
-07-fullscreen-and-resizing/node_modules
-08-geometries/node_modules
-09-debug-ui/node_modules
-10-textures/node_modules
-11-materials/node_modules
+node_modules
