--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ threejs_journey/excersie/node_modules
 09-debug-ui/node_modules
 10-textures/node_modules
 11-materials/node_modules
+14-lights/node_modules
